--- a/style.css
+++ b/style.css
@@ -41,7 +41,57 @@ h1{
     background-color: #F0F8FF;
 }
 
-.answer:hover{
+.answer.correct{
+    border:1px solid green;
+    background-color: #0080004f;
+}
+
+/* .answer.correct:hover{
+    border:1px solid green;
+    background-color: #0080004f;
+} */
+
+.answer.wrong{
+    border:1px solid red;
+    background-color: #ff00003b;
+}
+
+/* .answer.wrong:hover{
+    border:1px solid red;
+    background-color: #ff00003b;
+} */
+/* .answer:hover{
     background-color: rgb(193, 220, 236);
+} */
+
+
+.answer i{
+    float:left;
+    display: none;
+    position:relative;
+    top:3px;
+}
+
+.fa-circle-xmark{
+    color:red;
+}
+
+.fa-circle-check{
+    color:green;
+}
+
+#next{
+    display: none;
+}
+
+#next, #check{
+    background-color: darkslategray;
+    color: white;
+    border: 0;
+    font-size: 24px;
+    padding: 6px 22px;
+    border-radius: 20px;
+    margin: 10px 0;
+    cursor: pointer;
 
 }
