--- a/style.css
+++ b/style.css
@@ -171,3 +171,50 @@ h1 {
 .grade {
     font-size: 32px;
 }
+
+.leaderboard {
+	box-shadow: 1px 1px 8px 0 #cccccc;
+	background: #ffffff;
+    margin: auto;
+    margin-top:20px;
+    font-size:20px;
+}
+
+.leaderboard-header {
+	width: 100%;
+	height: 4rem;
+	background: lightblue;
+}
+
+.leaderboard-item {
+	display: flex;
+	flex-flow: row nowrap;
+	height: 100%;
+	align-items: center;
+	border-bottom: 1px solid #cccccf;
+}
+
+.leaderboard-item-cell {
+	box-sizing: border-box;
+	height: 100%;
+	padding: 1rem;
+	display: flex;
+	align-items: center;
+}
+
+.leaderboard-item-cell-rank {
+	width: 14%;
+  
+}
+
+.leaderboard-item-cell-user {
+	flex-grow: 1;
+}
+
+.leaderboard-item-cell-score {
+	width: 25%;
+}
+
+.leaderboard-item-cell-alltime {
+	width: 25%;
+}
